--- a/UnderwaterEffect-Canvas/index.html
+++ b/UnderwaterEffect-Canvas/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <canvas id="main-canvas" class="center" width="1000" height="540">
-            Your browser does not support HTML5 Canvas.
+            Your browser does not support HTML5 Canvas s.
         </canvas>
         
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
