--- a/UnderwaterEffect-Canvas/index.html
+++ b/UnderwaterEffect-Canvas/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     <body>
 
         <canvas id="main-canvas" class="center" width="1000" height="540">
-            Your browser does not support HTML5 Canvas. s
+            Your browser does not support HTML5 Canvas.
         </canvas>
         
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
