--- a/UnderwaterEffect-Canvas/index.html
+++ b/UnderwaterEffect-Canvas/index.html
@@ -9,8 +9,10 @@
     <body>
 
         <canvas id="main-canvas" class="center" width="1000" height="540">
-            Your browser does not support HTML5 Canvas s.
+            Your browser does not support HTML5 Canvas.
         </canvas>
+        
+        bla bla
         
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="include/bubble.js"></script>
