--- a/UnderwaterEffect-Canvas/index.html
+++ b/UnderwaterEffect-Canvas/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <canvas id="main-canvas" class="center" width="1000" height="540">
-            Your browser does not support HTML5 Canvas. dsada
+            Your browser does not support HTML5 Canvas.
         </canvas>
         
         bla bla 
