--- a/UnderwaterEffect-Canvas/index.html
+++ b/UnderwaterEffect-Canvas/index.html
@@ -12,7 +12,7 @@
             Your browser does not support HTML5 Canvas.
         </canvas>
         
-        bla bla bla bla
+        bla bla bla bla rerere
         
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="include/bubble.js"></script>
