--- a/Online Store/index.html
+++ b/Online Store/index.html
@@ -4,8 +4,12 @@
         <title>Online Store</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
+        <script type="text/javascript" src="include/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="include/style.css"/>
     </head>
     <body>
+        <header>Javascript Online Store Prototype</header>
         <div>TODO write content</div>
     </body>
 </html>
