--- a/Online Store/index.html
+++ b/Online Store/index.html
@@ -6,10 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="include/main.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="include/style.css"/>
     </head>
     <body>
         <header>Javascript Online Store Prototype</header>
-        <div>TODO write content</div>
+        <div id="container">
+            <div class="product-wrapper">
+                
+            </div>
+        </div>
     </body>
 </html>
