--- a/Online Store/index.html
+++ b/Online Store/index.html
@@ -11,7 +11,6 @@
     </head>
     <body>
         <header>Javascript Online Store Prototype</header>
-        <div id="container">
-        </div>
+        <div id="container"></div>
     </body>
 </html>
