--- a/Online Store/product.html
+++ b/Online Store/product.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>Product Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
+        <script type="text/javascript" src="include/product.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,400' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="include/style.css"/>
     </head>
     <body>
-        <div></div>
+        <div id="container"></div>
     </body>
 </html>
