--- a/Online Store/product.html
+++ b/Online Store/product.html
@@ -8,12 +8,15 @@
         <script type="text/javascript" src="include/product.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="include/style.css"/>
-    </head>
+    </head> 
     <body>
         <header>Javascript Online Store Prototype</header>
         <div id="container">
             <div class="single-product-wrapper">
                 
+            </div>
+            <div id="button-wrapper">
+                <a href="index.html"><input type="button" value="< Go Back"/></a>
             </div>
         </div>
     </body>
