--- a/Phonebook/index.html
+++ b/Phonebook/index.html
@@ -7,15 +7,14 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="include/style.css"/>
         <script type="text/javascript" src="include/jquery-2.0.3.js"></script>
-        <script type="text/javascript" src="include/main.js"></script>
     </head>
     <body>
         <div id="container">
             <h2>Phone Book:</h2>
             <div id="input-wrapper">
-                <input type="text" placeholder="Name"/>
-                <input type="text" placeholder="Phone Number"/>
-                <input type="text" placeholder="Notes"/><br/>
+                <input id="name" type="text" placeholder="Name"/>
+                <input id="number" type="text" placeholder="Phone Number"/>
+                <input id="note" type="text" placeholder="Notes"/><br/>
                 <input id="btn" type="button" value="Insert"/>
             </div>
             <div id="table-wrapper">
@@ -31,14 +30,16 @@
                             <td>
                                 Notes
                             </td>
+                            <td>
+                                Delete
+                            </td>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-    </body>
+        <script type="text/javascript" src="include/main.js"></script>
+    </body>   
 </html>
